kubernetes/apps/vikunja/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vikunja
  namespace: apps
  labels:
    app: vikunja
  annotations:
    keel.sh/policy: force
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@every 12h"
    keel.sh/approvals: "1"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: vikunja
  template:
    metadata:
      labels:
        app: vikunja
    spec:
      containers:
      - name: vikunja
        image: vikunja/vikunja:latest
        ports:
        - containerPort: 3456
          name: http
        volumeMounts:
        - name: files
          mountPath: /app/vikunja/files

        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "1Gi"
            cpu: "1000m"

      volumes:
      - name: files
        persistentVolumeClaim:
          claimName: vikunja-files-pvc
