kubernetes/apps/vikunja/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: vikunja
  namespace: apps
spec:
  selector:
    app: vikunja
  ports:
  - port: 3456
    targetPort: 3456
  type: ClusterIP
